fixed overflow circle, set .35s time for appearing, change 2 color for middle circle

--- a/scss/circle1.scss
+++ b/scss/circle1.scss
@@ -15,12 +15,18 @@
       left: 0;
       width: 20px;
     }
-    10% {
+    8.5% {
       background-color: rgb(24, 144, 184);
       transform: scale(1.5);
       left: 0;
       width: 20px;
     }
+    // 10% {
+    //   background-color: rgb(24, 144, 184);
+    //   transform: scale(1.5);
+    //   left: 0;
+    //   width: 20px;
+    // }
     15% {
       background-color: rgb(24, 144, 184);
       transform: scale(1);
@@ -39,12 +45,18 @@
       left: 0;
       width: 20px;
     }
-    30% {
+    28.5% {
       background-color: rgb(24, 144, 184);
       transform: scale(1.5);
       left: 0;
       width: 20px;
     }
+    // 30% {
+    //   background-color: rgb(24, 144, 184);
+    //   transform: scale(1.5);
+    //   left: 0;
+    //   width: 20px;
+    // }
     35% {
       background-color: rgb(24, 144, 184);
       transform: scale(1);
