--- a/scss/circle3.scss
+++ b/scss/circle3.scss
@@ -26,7 +26,7 @@
       left: 0;
       height: 20px;
     }
-    15% {
+    13.5%{
       transform: scale(1.5);
       background-color: red;
       border: none;
@@ -34,6 +34,14 @@
       left: 0;
       height: 20px;
     }
+    // 15% {
+    //   transform: scale(1.5);
+    //   background-color: red;
+    //   border: none;
+    //   top: 0;
+    //   left: 0;
+    //   height: 20px;
+    // }
     20% {
       transform: scale(1);
       background-color: red;
@@ -58,7 +66,7 @@
       left: 0;
       height: 20px;
     }
-    35% {
+    33.5% {
       transform: scale(1.5);
       background-color: transparent;
       border: 2px red solid;
@@ -66,6 +74,14 @@
       top: 0;
       height: 20px;
     }
+    // 35% {
+    //   transform: scale(1.5);
+    //   background-color: transparent;
+    //   border: 2px red solid;
+    //   left: 0;
+    //   top: 0;
+    //   height: 20px;
+    // }
     40% {
       transform: scale(1);
       background-color: transparent;
