--- a/scss/circle5.scss
+++ b/scss/circle5.scss
@@ -1,9 +1,3 @@
-.circle5 {
-    animation: circle5 10s linear infinite;
-    transform: scale(0);
-    background:linear-gradient(45deg, lightblue, rgb(19, 75, 230))
-}
-
 @keyframes circle5 {
     0% {
         transform: scale(0);        
