--- a/scss/circle7.scss
+++ b/scss/circle7.scss
@@ -15,9 +15,12 @@
     20% {
       transform: scale(1);
     }
-    25% {
+    23.5%{
       transform: scale(1.5);
     }
+    // 25% {
+    //   transform: scale(1.5);
+    // }
     30% {
       transform: scale(1);
     }
