--- a/scss/circle9.scss
+++ b/scss/circle9.scss
@@ -28,12 +28,18 @@
       top: 0;
       border: none;
     }
-    20% {
+    18.5% {
       background-color: yellow;
       transform: scale(1.5);
       top: 0;
       border: none;
     }
+    // 20% {
+    //   background-color: yellow;
+    //   transform: scale(1.5);
+    //   top: 0;
+    //   border: none;
+    // }
     25% {
       background-color: yellow;
       transform: scale(1);
@@ -76,12 +82,18 @@
       top: 40px;
       border: none;
     }
-    60% {
+    58.5% {
       background-color: yellow;
       transform: scale(1.5);
       top: 40px;
       border: none;
     }
+    // 60% {
+    //   background-color: yellow;
+    //   transform: scale(1.5);
+    //   top: 40px;
+    //   border: none;
+    // }
     65% {
       background-color: transparent;
       border: 2px solid yellow;
@@ -121,13 +133,13 @@
     95% {
       background-color: yellow;
       border: none;
-      transform: scale(1);
+      transform: scale(1.1);
       top: 0
     }
     100% {
       background-color: yellow;
       border: none;
-      transform: scale(1);
+      transform: scale(1.1);
       top: 0
     }
   }
